frontend/tests/errors/ER-006/i32_overflow/test.vx
// @rfc: doc/vexel-rfc.md#errors--diagnostics
// @desc: Literal overflow: Integer or float literals that exceed type range are compile-time errors | Literal overflow: i32 value exceeds range


&^main() -> #i32 {
    value:#i32 = 2147483648;
    value;
}
